# django_project01

./: .gitignore  pyproject.toml  requirements.txt  secrets.json
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0002_alter_article_content.py  0002_comment.py
config/: settings.py  urls.py
project_01/: requirements.txt  settings.py  urls.py  wsgi.py
project_01/articles/: models.py  urls.py
project_01/articles/migrations/: 0001_initial.py
project_01/config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
vevn/: pyvenv.cfg
vevn/Scripts/: activate  activate.bat  requirements.txt
